# inverted-index-server

./: .gitignore  CMakeLists.txt  build_index.cpp  client.cpp  main.cpp  readme.md  server.cpp
collections/: hash_table.h  inverted_index.h  linked_list.h  node.h  set.h
collections/hash_table/: hash_table.h
interface/: client.cpp  client.h  server.cpp  server.h
network/: constant.h  protocol.cpp  protocol.h  socket.cpp  socket.h
routines/: index.cpp  index.h  test.cpp  test.h
utils/: str.cpp  str.h
utils/io/: input.cpp  input.h  output.cpp  output.h
